--- a/index.html
+++ b/index.html
@@ -1,156 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pakisa Fuel Voucher</title>
-  <script src="https://unpkg.com/@supabase/supabase-js"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 30px;
-      background: #f5f5f5;
-    }
-    h1 {
-      color: #072760;
-    }
-    form {
-      background: white;
-      padding: 20px;
-      border-radius: 6px;
-      max-width: 400px;
-    }
-    label {
-      display: block;
-      margin-top: 10px;
-      font-weight: bold;
-    }
-    select, input, button {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-    }
-    button {
-      background: #0F99DA;
-      color: white;
-      border: none;
-      cursor: pointer;
-      margin-top: 15px;
-    }
-    button:hover {
-      background: #072760;
-    }
-    #status {
-      margin-top: 15px;
-      font-weight: bold;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>Drivers</title>
 </head>
 <body>
-  <h1>Pakisa Fuel Voucher</h1>
-  <form id="voucherForm">
-    <!-- Driver Selection -->
-    <label for="driver">Driver:</label>
-    <select id="driver" name="driver" required>
-      <option value="">Loading drivers...</option>
-    </select>
+  <h1>Driver List</h1>
+  <div id="driver-list">Loading...</div>
 
-    <!-- Vehicle Selection -->
-    <label for="vehicle">Vehicle:</label>
-    <select id="vehicle" name="vehicle" required>
-      <option value="">Loading vehicles...</option>
-    </select>
+  <script type="module">
+    import { createClient } from 'https://esm.sh/@supabase/supabase-js'
 
-    <!-- Amount -->
-    <label for="amount">Fuel Amount (R):</label>
-    <input type="number" id="amount" name="amount" required min="50" />
+    // 🔑 Replace these with your own Supabase details
+    const supabaseUrl = "https://YOUR_PROJECT_ID.supabase.co"
+    const supabaseKey = "YOUR_ANON_KEY"
+    const supabase = createClient(supabaseUrl, supabaseKey)
 
-    <button type="submit">Send Voucher</button>
-  </form>
+    async function loadDrivers() {
+      const driverList = document.getElementById("driver-list")
 
-  <p id="status"></p>
+      try {
+        // fetch all rows
+        const { data, error } = await supabase
+          .from("drivers")
+          .select("id, name, phone")
 
-  <script>
-    // ✅ Replace with your actual Supabase keys
-    const SUPABASE_URL = "https://sfvoptdderulwrpdywmb.supabase.co"; 
-    const SUPABASE_ANON_KEY = "YOUR_SUPABASE_ANON_KEY"; 
-    const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+        if (error) {
+          console.error(error)
+          driverList.innerHTML = "❌ Error fetching drivers"
+          return
+        }
 
-    async function loadDriversAndVehicles() {
-      console.log("Fetching drivers...");
-      const { data: drivers, error: driversError } = await supabaseClient
-        .from("drivers")
-        .select("*");
+        if (!data || data.length === 0) {
+          driverList.innerHTML = "⚠️ No drivers found in Supabase"
+          return
+        }
 
-      console.log("Drivers:", drivers, "Error:", driversError);
-
-      const driverSelect = document.getElementById("driver");
-      driverSelect.innerHTML = ""; 
-
-      if (driversError || !drivers || drivers.length === 0) {
-        driverSelect.innerHTML = `<option value="">⚠️ No drivers found. Add in Supabase.</option>`;
-      } else {
-        drivers.forEach(d => {
-          const option = document.createElement("option");
-          option.value = d.id;
-          option.textContent = `${d.name} (${d.phone})`;
-          driverSelect.appendChild(option);
-        });
-      }
-
-      console.log("Fetching vehicles...");
-      const { data: vehicles, error: vehiclesError } = await supabaseClient
-        .from("vehicles")
-        .select("*");
-
-      console.log("Vehicles:", vehicles, "Error:", vehiclesError);
-
-      const vehicleSelect = document.getElementById("vehicle");
-      vehicleSelect.innerHTML = ""; 
-
-      if (vehiclesError || !vehicles || vehicles.length === 0) {
-        vehicleSelect.innerHTML = `<option value="">⚠️ No vehicles found. Add in Supabase.</option>`;
-      } else {
-        vehicles.forEach(v => {
-          const option = document.createElement("option");
-          option.value = v.id;
-          option.textContent = v.registration;
-          vehicleSelect.appendChild(option);
-        });
+        // show drivers
+        driverList.innerHTML = data.map(d =>
+          `<p><b>${d.name}</b> (${d.phone}) - ID: ${d.id}</p>`
+        ).join("")
+      } catch (err) {
+        console.error(err)
+        driverList.innerHTML = "❌ Unexpected error"
       }
     }
 
-    // Form submit
-    document.getElementById("voucherForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const driver = document.getElementById("driver").value;
-      const vehicle = document.getElementById("vehicle").value;
-      const amount = document.getElementById("amount").value;
-
-      if (!driver || !vehicle || !amount) {
-        document.getElementById("status").innerText = "Please fill all fields.";
-        return;
-      }
-
-      console.log("Inserting voucher:", { driver, vehicle, amount });
-
-      // ✅ Insert using amount_rand
-      const { error } = await supabaseClient.from("fuel_vouchers").insert([
-        { driver_id: driver, vehicle_id: vehicle, amount_rand: amount }
-      ]);
-
-      if (error) {
-        document.getElementById("status").innerText = "❌ Error: " + error.message;
-        console.error("Insert error:", error);
-      } else {
-        document.getElementById("status").innerText = "✅ Voucher created successfully!";
-        document.getElementById("voucherForm").reset();
-        loadDriversAndVehicles();
-      }
-    });
-
-    // Load data when page opens
-    loadDriversAndVehicles();
+    loadDrivers()
   </script>
 </body>
 </html>
