--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     // 🔑 Replace these with your own Supabase details
     const supabaseUrl = "https://YOUR_PROJECT_ID.supabase.co"
-    const supabaseKey = "YOUR_ANON_KEY"
+    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNmdm9wdGRkZXJ1bHdycGR5d21iIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgxNzY4NjAsImV4cCI6MjA3Mzc1Mjg2MH0.bHy_aZ9TOGLfanG6-xNb3HykxwpWAiUNOcfBbvN-OME"
     const supabase = createClient(supabaseUrl, supabaseKey)
 
     async function loadDrivers() {
