--- a/index.html
+++ b/index.html
@@ -2,51 +2,138 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Drivers</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pakisa Fuel Voucher</title>
+  <script src="https://unpkg.com/@supabase/supabase-js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 24px;
+      background: #f5f6f8;
+    }
+    h1 { color: #072760; }
+    form {
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      max-width: 400px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+    }
+    label { display:block; margin-top:10px; font-weight:bold; }
+    select, input, button { width:100%; padding:8px; margin-top:5px; }
+    button {
+      background: #0F99DA;
+      color:white;
+      border:none;
+      cursor:pointer;
+      margin-top:15px;
+    }
+    button:hover { background: #072760; }
+    #status { margin-top:15px; font-weight:bold; }
+  </style>
 </head>
 <body>
-  <h1>Driver List</h1>
-  <div id="driver-list">Loading...</div>
+  <h1>Pakisa Fuel Voucher</h1>
 
-  <script type="module">
-    import { createClient } from 'https://esm.sh/@supabase/supabase-js'
+  <form id="voucherForm">
+    <label for="driver">Driver:</label>
+    <select id="driver" required>
+      <option value="">Loading drivers…</option>
+    </select>
 
-    // 🔑 Replace these with your own Supabase details
-    const supabaseUrl = "https://YOUR_PROJECT_ID.supabase.co"
-    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNmdm9wdGRkZXJ1bHdycGR5d21iIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgxNzY4NjAsImV4cCI6MjA3Mzc1Mjg2MH0.bHy_aZ9TOGLfanG6-xNb3HykxwpWAiUNOcfBbvN-OME"
-    const supabase = createClient(supabaseUrl, supabaseKey)
+    <label for="vehicle">Vehicle:</label>
+    <select id="vehicle" required>
+      <option value="">Loading vehicles…</option>
+    </select>
 
-    async function loadDrivers() {
-      const driverList = document.getElementById("driver-list")
+    <label for="amount">Fuel Amount (R):</label>
+    <input type="number" id="amount" required min="50">
 
-      try {
-        // fetch all rows
-        const { data, error } = await supabase
-          .from("drivers")
-          .select("id, name, phone")
+    <button type="submit">Send Voucher</button>
+  </form>
 
-        if (error) {
-          console.error(error)
-          driverList.innerHTML = "❌ Error fetching drivers"
-          return
-        }
+  <p id="status"></p>
 
-        if (!data || data.length === 0) {
-          driverList.innerHTML = "⚠️ No drivers found in Supabase"
-          return
-        }
+  <script>
+    // ----------------- SUPABASE CONFIG -----------------
+    const SUPABASE_URL = "https://sfvoptdderulwrpdywmb.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNmdm9wdGRkZXJ1bHdycGR5d21iIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgxNzY4NjAsImV4cCI6MjA3Mzc1Mjg2MH0.bHy_aZ9TOGLfanG6-xNb3HykxwpWAiUNOcfBbvN-OME";
+    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-        // show drivers
-        driverList.innerHTML = data.map(d =>
-          `<p><b>${d.name}</b> (${d.phone}) - ID: ${d.id}</p>`
-        ).join("")
-      } catch (err) {
-        console.error(err)
-        driverList.innerHTML = "❌ Unexpected error"
+    // ----------------- LOAD DROPDOWNS -----------------
+    async function loadDriversAndVehicles() {
+      // Drivers
+      const { data: drivers, error: driversError } = await supabase.from("drivers").select("*");
+      const driverSelect = document.getElementById("driver");
+      driverSelect.innerHTML = "";
+      if (driversError || !drivers || drivers.length === 0) {
+        driverSelect.innerHTML = `<option value="">⚠️ No drivers found</option>`;
+      } else {
+        drivers.forEach(d => {
+          const option = document.createElement("option");
+          option.value = d.id;
+          option.textContent = `${d.name} (${d.phone})`;
+          driverSelect.appendChild(option);
+        });
+      }
+
+      // Vehicles
+      const { data: vehicles, error: vehiclesError } = await supabase.from("vehicles").select("*");
+      const vehicleSelect = document.getElementById("vehicle");
+      vehicleSelect.innerHTML = "";
+      if (vehiclesError || !vehicles || vehicles.length === 0) {
+        vehicleSelect.innerHTML = `<option value="">⚠️ No vehicles found</option>`;
+      } else {
+        vehicles.forEach(v => {
+          const option = document.createElement("option");
+          option.value = v.id;
+          option.textContent = v.registration || v.reg_number;
+          vehicleSelect.appendChild(option);
+        });
       }
     }
 
-    loadDrivers()
+    // ----------------- FORM SUBMIT -----------------
+    document.getElementById("voucherForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const driver = document.getElementById("driver").value;
+      const vehicle = document.getElementById("vehicle").value;
+      const amount = parseFloat(document.getElementById("amount").value);
+
+      if (!driver || !vehicle || !amount) {
+        document.getElementById("status").innerText = "Please fill all fields.";
+        return;
+      }
+
+      // Insert into fuel_vouchers (amount_rand column)
+      const { error } = await supabase.from("fuel_vouchers").insert([
+        { driver_id: driver, vehicle_id: vehicle, amount_rand: amount }
+      ]);
+
+      if (error) {
+        document.getElementById("status").innerText = "❌ Error: " + error.message;
+        console.error(error);
+        return;
+      }
+
+      document.getElementById("status").innerText = "✅ Voucher created successfully!";
+
+      // Optional: call SMS Portal via Supabase function
+      const driverObj = (await supabase.from("drivers").select("*").eq("id", driver).single()).data;
+      if (driverObj?.phone) {
+        const smsMessage = `Pakisa Fuel Voucher: R${amount} approved for your vehicle.`;
+        await fetch(`${SUPABASE_URL}/functions/v1/send_sms_voucher`, {
+          method: "POST",
+          headers: { "Content-Type": "application/json", "Authorization": `Bearer ${SUPABASE_ANON_KEY}` },
+          body: JSON.stringify({ phone: driverObj.phone, message: smsMessage })
+        });
+      }
+
+      // Reset form
+      document.getElementById("voucherForm").reset();
+    });
+
+    loadDriversAndVehicles();
   </script>
 </body>
 </html>
